--- a/users/templates/base.html
+++ b/users/templates/base.html
@@ -382,7 +382,7 @@
                                     </li>
                                     <li >
                                          <a href="">
-                                                <i class="fa fa-archive"></i>
+                                                <i class="fa fa-gg"></i>
                                                 <span class="menu-title"> 
                                                <strong>System</strong>
                                                </span>
