--- a/users/templates/base.html
+++ b/users/templates/base.html
@@ -355,7 +355,7 @@
                                         <a href="{% url 'instalment'%}">
                                             <i class="fa fa-address-card"></i>
                                             <span class="menu-title">
-                                                <strong>Instalment</strong>
+                                                <strong>Installments</strong>
                                                 
                                             </span>
                                         </a>
@@ -459,9 +459,9 @@
                                         {% url 'subrequest' as req1 %}
                                         <li {% if request.path == req1  %} class="active-sub"{% endif %}>
                                             <a href="{% url 'subrequest' %}">
-                                                <i class="fa fa-paper-plane-o"></i>
+                                                <i class="fa fa-wrench"></i>
                                                 <span class="menu-title">
-                                                    <strong>Request</strong>
+                                                    <strong>Technician Request</strong>
                                                     
                                                 </span>
                                                 
