--- a/users/templates/subrequest.html
+++ b/users/templates/subrequest.html
@@ -6,7 +6,7 @@
                     
 					<div class="panel">
                         <div class="panel-heading">
-                            <h3 class="panel-title">Subscription Request</h3>
+                            <h3 class="panel-title">Technician Requests</h3>
                         </div>
                     
                         <!--Data Table-->
