--- a/users/templates/checkout.html
+++ b/users/templates/checkout.html
@@ -7,13 +7,13 @@
 		<div class="col-lg-12">
 			<div class="box-element">
 
-				<a  class="btn btn-outline-dark" href="{% url 'update_subscription' subscription.id %}">&#x2190; <strong>Go Back</strong> </a>
+				{% comment %} <a  class="btn btn-outline-dark" href="{% url 'update_subscription' subscription.id %}">&#x2190; <strong>Go Back</strong> </a> {% endcomment %}
 
 				<br>
 				<br>
 				<table class="table">
 					<tr>
-						<th><h5>Total:<strong> {{subscription.get_total_amount|intcomma}} Rwf</strong></h5></th>
+						<th><h5>Total:<strong> {{subscription.System.total|intcomma}} Rwf</strong></h5></th>
 						<th>
 							<a  style="float:right; margin:5px;" class="btn btn-success" href="{% url 'confirm' subscription.id %}">confirm</a>
 							<a  style="float:right; margin:5px;" class="btn btn-danger" href="{% url 'cancel' subscription.id %}">cancel</a>
@@ -28,24 +28,24 @@
 				<div class="cart-row">
 					<div style="flex:2"></div>
 					<div style="flex:2"><strong>Item</strong></div>
-					<div style="flex:1"><strong>Price</strong></div>
+					{% comment %} <div style="flex:1"><strong>Price</strong></div> {% endcomment %}
 					<div style="flex:1"><strong>Quantity</strong></div>
-					<div style="flex:1"><strong>Total</strong></div>
+					{% comment %} <div style="flex:1"><strong>Total</strong></div> {% endcomment %}
 				</div>
 				{% for item in my_tools %}
 				<div class="cart-row">
 					<div style="flex:2"><img class="row-image" src="{{item.product.imageURL}}"></div>
 					<div style="flex:2"><p>{{item.ToolID.Title}}</p></div>
-					<div style="flex:1"><p>{{item.ToolID.Amount|intcomma}} Rwf </p></div>
+					{% comment %} <div style="flex:1"><p>{{item.ToolID.Amount|intcomma}} Rwf </p></div> {% endcomment %}
 					<div style="flex:1">
 						<p class="quantity">{{item.quantity}}</p>
-						<div class="quantity">
+						{% comment %} <div class="quantity">
 							<img data-product="{{item.id}}" data-action="add" class="chg-quantity update-cart" src="{% static  'img/arrow-up.png' %}">
 					
 							<img data-product="{{item.id}}" data-action="remove" class="chg-quantity update-cart" src="{% static  'img/arrow-down.png' %}">
-						</div>
+						</div> {% endcomment %}
 					</div>
-					<div style="flex:1"><p>{{item.get_total|intcomma}} Rwf</p></div>
+					{% comment %} <div style="flex:1"><p>{{item.get_total|intcomma}} Rwf</p></div> {% endcomment %}
 				</div>
 				{% endfor %}
 			</div>
