--- a/users/templates/update_system.html
+++ b/users/templates/update_system.html
@@ -15,10 +15,16 @@
                                 {% csrf_token %}
                                     <div class="panel-body">
                                         <div class="row">
-                                            <div class="col-sm-12">
+                                            <div class="col-sm-6">
                                                 <div class="form-group">
                                                     <label class="control-label">Title</label>
-                                                    <input type="text" class="form-control" name="title" value={{updatesystem.title}}> 
+                                                    <input type="text" class="form-control" name="title" value="{{updatesystem.title}}"> 
+                                                </div>
+                                            </div>
+                                            <div class="col-sm-6">
+                                                <div class="form-group">
+                                                    <label class="control-label">Total price</label>
+                                                    <input type="text" class="form-control" name="total" value={{updatesystem.total}}> 
                                                 </div>
                                             </div>
                                             
