--- a/users/templates/Installament.html
+++ b/users/templates/Installament.html
@@ -53,21 +53,21 @@
                                     
                                     <tbody>
                                     {% for sub in subscriptions %}
-                                    {% with payment=sub.get_total_amount|div:12 %}
+                                    {% with payment=sub.System.total|div:12 %}
                                     {% widthratio sub.get_overdue_months 1 payment as overdueBalance %}
                                     <tr>
                                             <td>{{sub.CustomerID.FirstName}} {{sub.CustomerID.LastName}}</td>
                                             <td>{{sub.From}}</td>
                                             <td>{{sub.Category.Title}}</td>
-                                            <td>{{sub.get_total_amount|intcomma}} Rwf</td>
-                                            {% if sub.get_total_amount|divisibleby:12%}
+                                            <td>{{sub.System.total|intcomma}} Rwf</td>
+                                            {% if sub.System.total|divisibleby:12%}
                                             <td> {{ payment|intcomma }} Rwf</td>                                           
                                             {% else %}
                                             <td> {{ payment|add:1|intcomma }} Rwf</td>                                           
                                             {% endif %}
                                             <td>{{sub.TotalBalance|intcomma }} Rwf</td>
-                                            <td>{{sub.get_total_amount| sub:sub.TotalBalance }}</td>
-                                            {% if sub.get_total_amount|divisibleby:12%}
+                                            <td>{{sub.System.total| sub:sub.TotalBalance }}</td>
+                                            {% if sub.System.total|divisibleby:12%}
                                             <td>{{overdueBalance}} Rwf</td>                                           
                                             {% else %}
                                             <td> {{ payment|add:1|mul:sub.get_overdue_months|intcomma }} Rwf</td>                                           
