--- a/users/templates/add_subscription.html
+++ b/users/templates/add_subscription.html
@@ -66,6 +66,13 @@
                                                     </select>  
                                                 </div>
                                             </div>
+
+                                            <div class="col-sm-12">
+                                                            <div class="form-group">
+                                                            <label class="control-label">Down payment</label>
+                                                            <input type="text" class="form-control" name="downpayment" >   
+                                                        </div>
+                                                </div>
                                            
                                             
                                             
