--- a/users/templates/approveothersystem.html
+++ b/users/templates/approveothersystem.html
@@ -11,41 +11,28 @@
                     
                                 <!--Block Styled Form -->
                                 <!--===================================================-->
-                                <form enctype="multipart/form-data" action="{% url 'approve_subscription' subscription.id %}" method="POST">
+                                <form enctype="multipart/form-data" action="{% url 'approvesubscription' subscription.id %}" method="POST">
                                 {% csrf_token %}
                                     <div class="panel-body">
 
                                         <div class="row">
      
                                             <div class="col-sm-12">
-                                                    <div class="form-group">
-                                                    <label class="control-label">System</label>
-                                                    <select class="form-control" name="system" id='system' required>
-                                                       <option value="">Select System</option> 
-                                                    </select>  
+                                                            <div class="form-group">
+                                                            <label class="control-label">Add tools</label>
+                                                            <input type="text" class="form-control" name="tools" >   
+                                                        </div>
                                                 </div>
-                                            </div>
-                                      
-
-                                            <div class="col-sm-12">
-                                                    <div class="form-group">
-                                                    <label class="control-label">Users</label>
-                                                    <select class="form-control" name="users" id='users' onchange="my_func()" required>
-                                                       <option value="">Select number of users</option> 
-                                                       <option value="Under 100">Under 100</option> 
-                                                       <option value="101-500">101-500</option> 
-                                                       <option value="500-1500">500-1500</option> 
-                                                       <option value="Above 1500">Above 1500</option> 
-                                                    
-                                                       
-                                                    </select>  
+                                                <div class="col-sm-12">
+                                                            <div class="form-group">
+                                                            <label class="control-label">Amount</label>
+                                                            <input type="text" class="form-control" name="amount" >   
+                                                        </div>
                                                 </div>
-                                            </div>
-
-                                            <div class="col-sm-12">
+                                                <div class="col-sm-12">
                                                             <div class="form-group">
                                                             <label class="control-label">Down payment</label>
-                                                            <input type="text" value='0' class="form-control" name="downpayment" >   
+                                                            <input type="number" value='0' class="form-control" name="downpayment" >   
                                                         </div>
                                                 </div>
                                            
@@ -76,7 +63,7 @@
                                         </div>
                                     </div>
                                     <div class="panel-footer text-right">
-                                        <button class="btn btn-block btn-success" type="submit">Checkout</button>
+                                        <button class="btn btn-block btn-success" type="submit">Confirm</button>
                                     </div>
                                 </form>
                                 <!--===================================================-->
